--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" href="src/assets/favicon/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="src/assets/favicon/apple-touch-icon.png" />
     <link rel="manifest" href="src/assets/favicon/site.webmanifest" />
+    <meta name="description" content="Software Engineer | Computer Science and Engineering at The Ohio State University" />
   </head>
   <body>
     <div id="root"></div>
